Tue May 23 14:31:11 UTC 2006  jiang,shanshan <shanshan.jiang@vanderbilt.edu>

        * DAnCE/RepositoryManager/Options.cpp
        * DAnCE/RepositoryManager/Options.h
        * DAnCE/RepositoryManager/RMadmin.cpp
        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp
        * DAnCE/RepositoryManager/RepositoryManager.cpp

          Added the naming service & the implementation of createPackage
          function to RepoMan.

Mon May 22 18:49:14 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Container_Base.cpp(ciao_install_home):

          Changed C-style casts of DLL entrypoints to static_cast<>s
          to the appropriate pointer to function. This change is
          intended to eliminate warnings from gcc 4.0.

Fri May 19 16:49:32 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/NodeApplicationManager/Containers_Info_Map.cpp:
        * DAnCE/NodeApplicationManager/URL_Parser.cpp:
        * DAnCE/NodeManager/Node_Manager.cpp:

          Minor changes to eliminate scoreboard warnings, and to bring
          code in line with the ACE style guidelines.

Thu May 18 20:28:00 UTC 2006 Roopa Pundaleeka <roopa@txcorp.com>

        * examples/Display/GPS/GPS_Impl.ccd:
        * examples/Display/NavDisplay/NavDisplay_Impl.ccd:
        * examples/Display/RateGen/RateGen_Impl.ccd:

        Removed these generated files from CVS.

Thu May 18 11:28:52 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>


        * examples/Display/Display_Base/GNUmakefile:
        * examples/Display/Display_Base/GNUmakefile.Display_Base_stub:
        * examples/Display/Display_Base/GNUmakefile.Display_Base_svnt:

          Removed these files from CVS.

Wed May 17 21:20:46 UTC 2006 Roopa Pundaleeka <roopa@txcorp.com>

        * TAO/CIAO/examples/Display:
          Ported the Display example to use the new CIAO framework


Tue May 16 12:10:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * README:
          Removed mentioning of vc6
